chore: fix simple layout issue

--- a/src/components/common-pages-layout/common-pages-layout.css
+++ b/src/components/common-pages-layout/common-pages-layout.css
@@ -9,6 +9,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-top: 1rem;
 }
 
 .c-common__content {
