--- a/src/components/work/work.css
+++ b/src/components/work/work.css
@@ -18,7 +18,7 @@
 
 .c-work-section > p {
   margin-top: 0.7rem;
-  font-size: 1.2rem;
+  font-size: 1.3rem;
 }
 
 button.c-work-section__button {
